logs/uw-restclients-gws.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/CommonConf-0.6.egg-info'...
Listing './lib/python3.5/site-packages/Jinja2-2.10.dist-info'...
Listing './lib/python3.5/site-packages/MarkupSafe-1.0.egg-info'...
Listing './lib/python3.5/site-packages/UW_RestClients_Core-0.9.4.egg-info'...
Listing './lib/python3.5/site-packages/UW_RestClients_GWS-0.3.egg-info'...
Listing './lib/python3.5/site-packages/commonconf'...
Listing './lib/python3.5/site-packages/commonconf/backend'...
Listing './lib/python3.5/site-packages/commonconf/test'...
Listing './lib/python3.5/site-packages/commonconf/test/files'...
Listing './lib/python3.5/site-packages/jinja2'...
Compiling './lib/python3.5/site-packages/jinja2/asyncfilters.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncfilters.py", line 24
    yield item
    ^
SyntaxError: 'yield' inside async function

Compiling './lib/python3.5/site-packages/jinja2/asyncsupport.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncsupport.py", line 35
    yield event
    ^
SyntaxError: 'yield' inside async function

Listing './lib/python3.5/site-packages/markupsafe'...
Listing './lib/python3.5/site-packages/mock'...
Listing './lib/python3.5/site-packages/mock/tests'...
Listing './lib/python3.5/site-packages/mock-2.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pbr'...
Listing './lib/python3.5/site-packages/pbr/cmd'...
Listing './lib/python3.5/site-packages/pbr/hooks'...
Listing './lib/python3.5/site-packages/pbr/tests'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/data_files'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/doc'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/doc/source'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/pbr_testpackage'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/pbr_testpackage/package_data'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/src'...
Listing './lib/python3.5/site-packages/pbr-3.1.1.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/restclients_core'...
Listing './lib/python3.5/site-packages/restclients_core/models'...
Listing './lib/python3.5/site-packages/restclients_core/tests'...
Listing './lib/python3.5/site-packages/restclients_core/tests/dao_implementation'...
Listing './lib/python3.5/site-packages/restclients_core/tests/dao_implementation/resource_override'...
Listing './lib/python3.5/site-packages/restclients_core/tests/dao_implementation/resource_override/testing'...
Listing './lib/python3.5/site-packages/restclients_core/tests/dao_implementation/resource_override/testing/file'...
Listing './lib/python3.5/site-packages/restclients_core/tests/dao_implementation/resources'...
Listing './lib/python3.5/site-packages/restclients_core/tests/dao_implementation/resources/testing'...
Listing './lib/python3.5/site-packages/restclients_core/tests/dao_implementation/resources/testing/file'...
Listing './lib/python3.5/site-packages/restclients_core/tests/dao_implementation/resources/testing/file/test%3folder'...
Listing './lib/python3.5/site-packages/restclients_core/tests/models'...
Listing './lib/python3.5/site-packages/restclients_core/tests/util'...
Listing './lib/python3.5/site-packages/restclients_core/util'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/urllib3'...
Listing './lib/python3.5/site-packages/urllib3/contrib'...
Listing './lib/python3.5/site-packages/urllib3/contrib/_securetransport'...
Listing './lib/python3.5/site-packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/urllib3/packages/backports'...
Listing './lib/python3.5/site-packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/urllib3/util'...
Listing './lib/python3.5/site-packages/urllib3-1.22.dist-info'...
Listing './lib/python3.5/site-packages/uw_gws'...
Listing './lib/python3.5/site-packages/uw_gws/resources'...
Listing './lib/python3.5/site-packages/uw_gws/resources/gws'...
Listing './lib/python3.5/site-packages/uw_gws/resources/gws/file'...
Listing './lib/python3.5/site-packages/uw_gws/resources/gws/file/group_sws'...
Listing './lib/python3.5/site-packages/uw_gws/resources/gws/file/group_sws/v2'...
Listing './lib/python3.5/site-packages/uw_gws/resources/gws/file/group_sws/v2/group'...
Listing './lib/python3.5/site-packages/uw_gws/templates'...
Listing './lib/python3.5/site-packages/uw_gws/tests'...
Listing './share'...
Listing './share/python-wheels'...
